--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>JustEJuice by charlespeach</title>
+    <title>JusteJuice by Marc Seidler</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,60 +15,51 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>JustEJuice</h1>
+        <img align="left" src="images/justejuice-logo.png" />
         <p>Deliciously fruity e-juice made in NZ by Marc Seidler</p>
-
-        <p class="view"><a href="https://github.com/charlespeach/just-juice">View the Project on GitHub <small>charlespeach/just-juice</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/charlespeach/just-juice/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/charlespeach/just-juice/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/charlespeach/just-juice">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <a href="mailto:sales@justejuice.co.nz">sales@justejuice.co.nz</a>
       </header>
       <section>
         <h3>
-<a id="apple-pie" class="anchor" href="#apple-pie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>APPLE PIE</h3>
+        <a id="apple-pie" class="anchor" href="#apple-pie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>APPLE PIE</h3>
 
-<p>Old Fashioned Apple pie - tart apples, warm cinnamon, buttery pastry with fresh whipped cream....just like when you were a kid </p>
+        <p>Old Fashioned Apple pie - tart apples, warm cinnamon, buttery pastry with fresh whipped cream....just like when you were a kid </p>
 
-<h3>
-<a id="cranapple-tart" class="anchor" href="#cranapple-tart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CRANAPPLE TART</h3>
+        <h3>
+        <a id="cranapple-tart" class="anchor" href="#cranapple-tart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CRANAPPLE TART</h3>
 
-<p>The tartness of cranberries, the sweetness of apples, wrapped in a buttery pastry.</p>
+        <p>The tartness of cranberries, the sweetness of apples, wrapped in a buttery pastry.</p>
 
-<h3>
-<a id="vanilla-custard" class="anchor" href="#vanilla-custard" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VANILLA CUSTARD</h3>
+        <h3>
+        <a id="vanilla-custard" class="anchor" href="#vanilla-custard" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VANILLA CUSTARD</h3>
 
-<p>Smooth and creamy vanilla custard.</p>
+        <p>Smooth and creamy vanilla custard.</p>
 
-<h3>
-<a id="monkey-dragon" class="anchor" href="#monkey-dragon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MONKEY DRAGON</h3>
+        <h3>
+        <a id="monkey-dragon" class="anchor" href="#monkey-dragon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MONKEY DRAGON</h3>
 
-<p>Bananas, cream and a fruity overtone. A delicious candy like combination that is not too sweet, a true delight for your tastebuds.</p>
+        <p>Bananas, cream and a fruity overtone. A delicious candy like combination that is not too sweet, a true delight for your tastebuds.</p>
 
-<h3>
-<a id="juicy-mango" class="anchor" href="#juicy-mango" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JUICY MANGO</h3>
+        <h3>
+        <a id="juicy-mango" class="anchor" href="#juicy-mango" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JUICY MANGO</h3>
 
-<p>A tropical mango base, blended with tasty fruits, not creamy, but clear &amp; pure juicy mango goodness, like the real thing.</p>
+        <p>A tropical mango base, blended with tasty fruits, not creamy, but clear &amp; pure juicy mango goodness, like the real thing.</p>
 
-<h3>
-<a id="jackfruit-jungle" class="anchor" href="#jackfruit-jungle" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JACKFRUIT JUNGLE</h3>
+        <h3>
+        <a id="jackfruit-jungle" class="anchor" href="#jackfruit-jungle" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JACKFRUIT JUNGLE</h3>
 
-<p>A unique tasting juice with jackfruit and exotic fruits that will make your tastebuds go bananas!</p>
+        <p>A unique tasting juice with jackfruit and exotic fruits that will make your tastebuds go bananas!</p>
 
-<h3>
-<a id="razzapple-macaron" class="anchor" href="#razzapple-macaron" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RAZZAPPLE MACARON</h3>
+        <h3>
+        <a id="razzapple-macaron" class="anchor" href="#razzapple-macaron" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RAZZAPPLE MACARON</h3>
 
-<p>Raspberries and Apples, jamming together, with a light almond cookie on the exhale, powdered sugar included. Sweet, but complex, a perfect morning vape with your coffee.</p>
+        <p>Raspberries and Apples, jamming together, with a light almond cookie on the exhale, powdered sugar included. Sweet, but complex, a perfect morning vape with your coffee.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/charlespeach">charlespeach</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This page is maintained by <a href="https://github.com/charlespeach">Charles Peach</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
